--- a/index.html
+++ b/index.html
@@ -21,8 +21,20 @@
       <div class="row">
         <div class="col" id="gameBox">
           <div class="col text-center mt-5">
-            <button type="button" class="btn btn-danger">CLICK HERE TO START</button>
+            <button id="start" type="button" class="btn btn-danger">CLICK HERE TO START</button>
           </div>
+          <div id="stats" class="col mt-5 bg-white text-center invisible">
+
+          </div>
+          <div id="questionBox" class="col bg-white invisible">
+            <div class="col text-center border-bottom border-dark">
+              <h2 id = "qDes">test</h2>
+              <div id = "showtime"></div>
+            </div>
+            <div id ="inputBox" class="pt-3 pb-3 text-center">
+            </div>
+          </div>
+
         </div>
       </div>
 
@@ -35,6 +47,7 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="assets/javascript/app.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
